[package]
name = "gdsetup"
version = "0.1.0"
edition = "2021"
authors = ["ARez"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.10", features = ["derive", "cargo"] }
env_logger = "0.10.0"
log = "0.4.17"
